--- a/package.json
+++ b/package.json
@@ -41,5 +41,18 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "description": "Simple react native app for playing videos.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rocksfenix/roflix.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/rocksfenix/roflix/issues"
+  },
+  "homepage": "https://github.com/rocksfenix/roflix#readme"
 }
