--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.9.0",
+    "@react-navigation/native": "^5.1.5",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-native": "0.62.1",
+    "react-native-get-random-values": "^1.3.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^4.4.5",
+    "react-native-webview": "^9.1.4",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
